examples/failing/KindError.ps
data KindError f a = One f | Two f a
